--- a/frontend/custom/style.css
+++ b/frontend/custom/style.css
@@ -26,8 +26,11 @@
   -o-transform: translateX(-50%);
 }
 
-.buy-theme, .all-demo {
-  display: none;
+#email {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 #platform-select {
@@ -45,8 +48,8 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  -webkit-text-fill-color: #FAFAFA;
-  -webkit-box-shadow: 0 0 0 1000px #132472 inset !important;
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: 0 0 0 1000px rgba(0,0,0,0) inset !important;
   transition: background-color 5000s ease-in-out 0s;
 }
 
@@ -108,4 +111,8 @@ select:-webkit-autofill:focus {
 #box6-2 {
   background-image: url('../images/dealssix.png');
   background-size: contain;
+}
+
+.buy-theme, .all-demo {
+  display: none;
 }
