--- a/frontend/custom/style.css
+++ b/frontend/custom/style.css
@@ -27,10 +27,12 @@
 }
 
 #email {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 10px;
   padding-left: 15px;
   padding-right: 15px;
+
+  color: rgb(100, 100, 100);
 }
 
 #platform-select {
